--- a/sections/image-feed/image-feed.image.liquid
+++ b/sections/image-feed/image-feed.image.liquid
@@ -39,14 +39,14 @@
   <a
     id="block--{{ block.id }}"
     {{ block.shopify_attributes }}
-    class="image-feed__image group relative w-full {{ section.settings.image__aspect_ratio }} overflow-hidden {{ responsive_visibility }}"
+    class="image-feed__image group relative w-full {{ section.settings.image__aspect_ratio }} overflow-hidden {{ responsive_visibility }} grid grid-cols-5"
     style="border: solid {{ border_width | default: 0 }}px var(--color-primary-outline);"
     data-scroll-item
     href="{{ url }}">
 
-    <div class="overlay-image absolute w-full h-full bg-black z-10 opacity-30 group-hf:opacity-90">
+    <div class="overlay-image absolute w-full h-full bg-black z-10 opacity-0 group-hf:opacity-40">
 
-      <div class="flex flex-col justify-between h-full w-full">
+      <div class="flex flex-col justify-between h-full w-full opacity-0 group-hf:opacity-100">
         {% comment %} username block {% endcomment %}
         <div class="absolute z-20 w-24 h-8 m-6 bg-[#d9d9d9] rounded flex justify-center items-center">
           <p class="text-black text-xs not-italic font-normal leading-[normal]">
@@ -55,7 +55,7 @@
         </div>
 
         {% comment %} placeholder text {% endcomment %}
-        <div class="flex w-[294px] h-9 justify-center items-center shrink-0 absolute bottom-0">
+        <div class="flex w-[294px] h-9 justify-center items-center shrink-0 absolute bottom-0 opacity-0 group-hf:opacity-100">
           <div class="shrink-0 text-white text-[15px] not-italic font-normal leading-[normal]">
             Placeholder text here for little description
           </div>
