--- a/sections/image-with-text/image-with-text.liquid
+++ b/sections/image-with-text/image-with-text.liquid
@@ -1,6 +1,6 @@
 {%- comment -%} Auto Generated Variables start {%- endcomment -%}
 {%- liquid
-  assign image = section.settings.image_picker
+  assign image = section.settings.image
   assign section_layout = section.settings.section_layout
   assign padding_top = section.settings.padding_top
   assign padding_bottom = section.settings.padding_bottom
@@ -11,14 +11,28 @@
 {%- comment -%} Auto Generated Variables end {%- endcomment -%}
 
 <div id="{{ sectionID }}" class="image-with-text w-screen h-[75vh] bg-white {{ section_layout }} {{ color_scheme }} {{ padding_top }} {{ padding_bottom }} {{ responsive_visibility }}">
-  <div class="grid md:grid-cols-2">
+  <div class="h-full grid md:grid-cols-2">
     <section class="flex-1 w-full flex items-center justify-center overflow-hidden">
       <figure class="relative grid flex-1 min-h-full">
-        <div>
-          {% render 'image', image: image %}
-        </div>
+        {% render 'image', image: image, width: 1400, placeholder: 'image' %}
       </figure>
     </section>
-    <section class="h-full w-full flex flex-col py-8"></section>
+    <section class="h-full w-full flex flex-col py-8">
+      <div class="w-full">
+        {% for block in section.blocks %}
+          {% case block.type %}
+            {% when 'text' %}
+            {% render 'richtext.text', block: block %}
+            {% when 'buttons' %}
+            {% render 'richtext.buttons', block: block %}
+            {% when 'typewriter' %}
+            {% render 'richtext.typewriter', block: block %}
+            {% when 'features' %}
+            {% render 'richtext.features', block: block %}
+          {% endcase %}
+        {% endfor %}
+      </div>
+      </div>
+    </section>
   </div>
 </div>
