--- a/sections/image-with-text/image-with-text.liquid
+++ b/sections/image-with-text/image-with-text.liquid
@@ -1,7 +1,6 @@
 {%- comment -%} Auto Generated Variables start {%- endcomment -%}
 {%- liquid
-  assign image = section.settings.image
-  assign section_layout = section.settings.section_layout
+  assign layout = section.settings.layout
   assign padding_top = section.settings.padding_top
   assign padding_bottom = section.settings.padding_bottom
   assign responsive_visibility = section.settings.responsive_visibility
@@ -13,25 +12,20 @@
 <div id="{{ sectionID }}" class="image-with-text w-screen h-[75vh] bg-white {{ section_layout }} {{ color_scheme }} {{ padding_top }} {{ padding_bottom }} {{ responsive_visibility }}">
   <div class="h-full grid md:grid-cols-2">
     <section class="flex-1 w-full flex items-center justify-center overflow-hidden">
-      <figure class="relative grid flex-1 min-h-full">
-        {% render 'image', image: image, width: 1400, placeholder: 'image' %}
-      </figure>
-    </section>
-    <section class="h-full w-full flex flex-col py-8">
-      <div class="w-full">
+      {% for block in section.blocks %}
+        {% render 'benefit-tabs.benefit', block: block, forloop: forloop, type: 'image-mobile-content' %}
+      {% endfor %}
+      <div data-scroll-controls class="hidden select-none bottom-3 absolute left-0 w-full justify-center">
         {% for block in section.blocks %}
-          {% case block.type %}
-            {% when 'text' %}
-            {% render 'richtext.text', block: block %}
-            {% when 'buttons' %}
-            {% render 'richtext.buttons', block: block %}
-            {% when 'typewriter' %}
-            {% render 'richtext.typewriter', block: block %}
-            {% when 'features' %}
-            {% render 'richtext.features', block: block %}
-          {% endcase %}
+          {% render 'benefit-tabs.benefit', block: block, forloop: forloop, type: 'scroll-tab-button' %}
         {% endfor %}
       </div>
+      <div class="flex flex-col justify-center h-full max-w-xl mx-auto {{ layout }}">
+        <div class="hidden lg:grid gap-5 justify-center items-center auto-rows-min mb-2">
+          {% for block in section.blocks %}
+            {% render 'benefit-tabs.benefit', block: block, forloop: forloop, type: 'desktop-text-content' %}
+          {% endfor %}
+        </div>
       </div>
     </section>
   </div>
