--- a/sections/image-with-text/image-with-text.liquid
+++ b/sections/image-with-text/image-with-text.liquid
@@ -11,22 +11,15 @@
 
 <div id="{{ sectionID }}" class="image-with-text w-screen h-[75vh] bg-white {{ section_layout }} {{ color_scheme }} {{ padding_top }} {{ padding_bottom }} {{ responsive_visibility }}">
   <div class="h-full grid md:grid-cols-2">
-    <section class="flex-1 w-full flex items-center justify-center overflow-hidden">
+    <div>
       {% for block in section.blocks %}
-        {% render 'benefit-tabs.benefit', block: block, forloop: forloop, type: 'image-mobile-content' %}
+        {% render 'image-with-text.benefit', block: block, forloop: forloop, type: 'image-mobile-content' %}
       {% endfor %}
-      <div data-scroll-controls class="hidden select-none bottom-3 absolute left-0 w-full justify-center">
-        {% for block in section.blocks %}
-          {% render 'benefit-tabs.benefit', block: block, forloop: forloop, type: 'scroll-tab-button' %}
-        {% endfor %}
-      </div>
-      <div class="flex flex-col justify-center h-full max-w-xl mx-auto {{ layout }}">
-        <div class="hidden lg:grid gap-5 justify-center items-center auto-rows-min mb-2">
-          {% for block in section.blocks %}
-            {% render 'benefit-tabs.benefit', block: block, forloop: forloop, type: 'desktop-text-content' %}
-          {% endfor %}
-        </div>
-      </div>
-    </section>
+    </div>
+    <div>
+      {% for block in section.blocks %}
+        {% render 'image-with-text.benefit', block: block, forloop: forloop, type: 'desktop-text-content' %}
+      {% endfor %}
+    </div>
   </div>
 </div>
