image resized and text centered

--- a/sections/image-with-text/image-with-text.liquid
+++ b/sections/image-with-text/image-with-text.liquid
@@ -11,12 +11,12 @@
 
 <div id="{{ sectionID }}" class="image-with-text w-screen h-[75vh] bg-white {{ section_layout }} {{ color_scheme }} {{ padding_top }} {{ padding_bottom }} {{ responsive_visibility }}">
   <div class="h-full grid md:grid-cols-2">
-    <div>
+    <div class="overflow-hidden">
       {% for block in section.blocks %}
         {% render 'image-with-text.benefit', block: block, forloop: forloop, type: 'image-mobile-content' %}
       {% endfor %}
     </div>
-    <div>
+    <div class="h-full flex items-center justify-center">
       {% for block in section.blocks %}
         {% render 'image-with-text.benefit', block: block, forloop: forloop, type: 'desktop-text-content' %}
       {% endfor %}
