--- a/sections/image-with-text/image-with-text.benefit.liquid
+++ b/sections/image-with-text/image-with-text.benefit.liquid
@@ -11,7 +11,7 @@
 {% case type %}
   <div class="flex h-full justify-center items-center">
     {% when 'image-mobile-content' %}
-    <figure class="relative grid transition-all ease-in-out snap-start min-w-full md:min-w-full snap-always" data-scroll-item>
+    <figure class="relative grid transition-all ease-in-out snap-start min-w-full md:min-w-full snap-always">
       <picture class="block relative pb-[100%] w-full overflow-hidden rounded-theme-md">
         {% if image == blank %}
           {% assign number = forloop.index | modulo: 6 | plus: 1 %}
@@ -26,7 +26,7 @@
     </figure>
 
     {% when 'desktop-text-content' %}
-    <div class="relative mt-0">
+    <div class="relative mt-0 hidden lg:block">
       {% render 'richtext', type: title_font, content: title %}
       {% render 'richtext', type: content_font, content: content %}
     </div>
